rename model file

--- a/reference/MFCC_1s_ViT.ipynb
+++ b/reference/MFCC_1s_ViT.ipynb
@@ -638,10 +638,10 @@
       },
       "outputs": [],
       "source": [
-        "threshold = 0.95\n",
+        "threshold = 0.8\n",
         "pred_threshold = sum(1 for x in predictions if x >= threshold)\n",
         "\n",
-        "print(f\"Number of predictions >= threshold: {pred_threshold}\")\n",
+        "print(f\"Number of predictions >= {threshold}: {pred_threshold}\")\n",
         "print(f\"Percentage of FAKE : {pred_threshold/len(predictions)*100}\")"
       ]
     },
